RESOLVED FIXED267728
[JSC] Node's JSTokenLocation sometimes doesn't point to the start of an expression
https://bugs.webkit.org/show_bug.cgi?id=267728
Summary [JSC] Node's JSTokenLocation sometimes doesn't point to the start of an expre...
Alexey Shvayka
Reported 2024-01-18 13:38:56 PST
rather than the beginning.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-01-18 13:39:20 PST
Alexey Shvayka
Comment 2 2024-01-18 15:31:18 PST
EWS
Comment 3 2024-01-19 19:11:10 PST
Committed 273255@main (e0132b80a422): <https://commits.webkit.org/273255@main> Reviewed commits have been landed. Closing PR #22944 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.